removed wp image caption code

--- a/_posts/2013-05-21-lync-2013-event-error-21054.md
+++ b/_posts/2013-05-21-lync-2013-event-error-21054.md
@@ -8,7 +8,7 @@ categories: [Address book service, Event ID, Lync 2013, technet, Unified Communi
 ---
 All the Lync server 2013 environments I've deployed so far is giving Event ID 21054 from LS Address Book Server once a day. It also happens when you run Update-CsAdressBook.
 
-[caption id="attachment_456" align="alignnone" width="365"]<img class="wp-image-456  " alt="Users are not indexed in the database that should be" src="http://codesalot.files.wordpress.com/2013/05/untitled.png" width="365" height="196" /> Users are not indexed in the database that should be[/caption]
+<img class="wp-image-456  " alt="Users are not indexed in the database that should be" src="http://codesalot.files.wordpress.com/2013/05/untitled.png" width="365" height="196" /> Users are not indexed in the database that should be
 
 I wondered what it was, and found it in the release notes for Lync Server 2013. Turns out that the issue can be safely ignored as long as the update is successful. You can also check the replication by running
 
