--- a/_posts/2010-12-08-photos-in-lync-2010.md
+++ b/_posts/2010-12-08-photos-in-lync-2010.md
@@ -21,11 +21,11 @@ It will give you this tab: (that's me in the picture btw)
 If you have a multidomain forest you will also need to enable global replication of the attribute. This procedure is described in the Exchangeteam <a href="http://msexchangeteam.com/archive/2010/03/10/454223.aspx" target="_blank">blogpost</a> linked in the beginning of this post.
 
 The photo won't display in the Lync client right away though. As per <a href="http://blog.schertz.name/2010/09/updating-the-lync-2010-address-book/">this</a> the ABServer in Lync 2010 has an update pass every night at 01:30AM Server time, just as in OCS2007R2. To speed this up you can run the cmdlet
-<pre>Update-CsAddressBook</pre>
+´´´Update-CsAddressBook´´´
 in the Lync management shell. Note that by default it will still take up to 5 minutes before the actual update pass is run. Look for event 21056 in the event log.
 
 If the user has not had any photos before, just log the user in and out of Lync, and it should be updated. If this is an updated photo, you will have to log out and exit the client and then delete the file
-<pre>%userprofile%AppDataLocalMicrosoftCommunicatorsip_&lt;SIP URI&gt;ABS_&lt;SIP URI&gt;.cache</pre>
+´´´%userprofile%AppDataLocalMicrosoftCommunicatorsip_&lt;SIP URI&gt;ABS_&lt;SIP URI&gt;.cache´´´
 Start the client again, and the photo should be updated!
 
 <img class="alignnone size-medium wp-image-188" title="Corporate photo" src="http://www.codesalot.com/wp-content/uploads/2010/12/Capture2-300x244.jpg" alt="" width="300" height="244" />
